add reference to sandbox's gist in a HTML comment

--- a/sandbox.html
+++ b/sandbox.html
@@ -12,3 +12,8 @@
 
 </script>
 </textarea><iframe style=border:0;flex-grow:1;width:0 id=I>
+<!--
+This is online hosted version of a resource that is primarily intended to be used as a DataURI bookmark.
+See the main source and instructions:
+https://gist.github.com/myfonj/c8ce74bf549e19600026ce9022388df8/
+-->
