--- a/tst/css-active-keyboard-activation-test-game.html
+++ b/tst/css-active-keyboard-activation-test-game.html
@@ -139,3 +139,6 @@ body {
 really do here? <small>Mostly nothing.</small></small></p>
 
 
+<hr>
+
+<p>For <a href="https://github.com/w3c/csswg-drafts/issues/7332">https://github.com/w3c/csswg-drafts/issues/7332</a></p>
