sandbox.html loading other files

--- a/sandbox.html
+++ b/sandbox.html
@@ -11,9 +11,21 @@
 <script>
 
 </script>
-</textarea><iframe style=border:0;flex-grow:1;width:0 id=I>
+</textarea><iframe style=border:0;flex-grow:1;width:0 id=I></iframe>
 <!--
 This is online hosted version of a resource that is primarily intended to be used as a DataURI bookmark.
 See the main source and instructions:
 https://gist.github.com/myfonj/c8ce74bf549e19600026ce9022388df8/
 -->
+<script>
+const s = location.search;
+if(s && s.startsWith('?.')){
+	fetch(s.slice(1))
+		.then(r => r.text())
+		.then(t => {
+			A.value = t;
+			F();
+		})
+		.catch(e => alert(e));
+}
+</script>
